Add embed from CathodeTV

--- a/video.html
+++ b/video.html
@@ -1,5 +1,5 @@
 <div id="video">
-  <h1>Video Goes Here</h1>
+  <iframe src="//ok.ru/videoembed/4450477350630" allow="autoplay" allowfullscreen="" width="1280" height="720" frameborder="0"></iframe>
 </div>
 <div id="chat">
   <h1>Chat Goes Here</h1>
