--- a/video.html
+++ b/video.html
@@ -2,5 +2,6 @@
   <iframe src="//ok.ru/videoembed/4450477350630" allow="autoplay" allowfullscreen="" width="1280" height="720" frameborder="0"></iframe>
 </div>
 <div id="chat">
-  <h1>Chat Goes Here</h1>
+  <iframe src="https://minnit.chat/CATHODETV?embed&amp;dark&amp;nickname=" style="border:none" allowtransparency="true" position="absolute" width="20%" height="720vh" frameborder="0">
+   </iframe>
 </div>
