--- a/cathode_responsive_edit.html
+++ b/cathode_responsive_edit.html
@@ -111,7 +111,8 @@
   <div id="vidChatContainer">
 
     <div id="videoContainer">
-      <iframe src="https://ok.ru/videoembed/4408155119334" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe>
+      <!-- <iframe src="https://ok.ru/videoembed/4408155119334" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe> -->
+      <iframe src="//ok.ru/videoembed/4450477350630" allow="autoplay" allowfullscreen="" frameborder="0"></iframe>
     </div>
 
     <div id="chatContainer" class='embed-container'>
