add diyfilmfestival groupchat

--- a/cathode_responsive_edit.html
+++ b/cathode_responsive_edit.html
@@ -118,7 +118,7 @@
     </div>
 
     <div id="chatContainer" class='embed-container'>
-      <iframe src='https://minnit.chat/CATHODETV?embed&dark&nickname=' allowTransparency='true'></iframe>
+      <iframe src='https://minnit.chat/diyfilmfestival?embed&dark&nickname=' allowTransparency='true'></iframe>
     </div>
 
   </div>
