--- a/cathode_responsive_edit.html
+++ b/cathode_responsive_edit.html
@@ -14,7 +14,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/6073731d35363c0861bf75a3/a16066cb-e635-4b0d-b7fd-8edf8849cf10/favicon.ico?format=100w"/>
-  <title>cathodetv.com – responsive edit</title>
+  <title>DIY Film Festival</title>
 </head>
 
 <body>
@@ -94,39 +94,30 @@
   </style>
 
   <div id="topBar">
-
     <div id="logoContainer">
       <a id="mainLogoLink" href="/" data-animation-role="header-element">
-        <img src="http://images.squarespace-cdn.com/content/v1/6073731d35363c0861bf75a3/1619035814789-VIYP08AWYWHN8VH7CNE1/CathodeTV_SpaceLogo-01.png" alt="">
+        DIY Film Festival
       </a>
     </div>
-
     <div id="scheduleContainer">
       <a id="scheduleButton" href="https://docs.google.com/presentation/d/1p9aO940bAG2Qm_hGwEhyQRgqot2xmrvDM4lvGCLnqNo/present#slide=id.p" target="_blank">SCHEDULE</a>
     </div>
-
   </div>
 
 
   <div id="vidChatContainer">
-
     <div id="videoContainer">
-      <!-- <iframe src="https://ok.ru/videoembed/4408155119334" allowfullscreen scrolling="no" allow="encrypted-media;"></iframe> -->
-      <!-- <iframe src="https://ok.ru/videoembed/4450477350630" allow="autoplay" allowfullscreen="" frameborder="0" allow="encrypted-media;"></iframe> -->
-      <iframe src="https://ok.ru/videoembed/3674750131796" allow="autoplay" allowfullscreen="" frameborder="0" allow="encrypted-media;"></iframe>
-      
+      <iframe src="https://ok.ru/videoembed/3674750131796" allow="autoplay" allowfullscreen="" frameborder="0" allow="encrypted-media;"></iframe>      
     </div>
-
     <div id="chatContainer" class='embed-container'>
       <iframe src='https://minnit.chat/diyfilmfestival?embed&dark&nickname=' allowTransparency='true'></iframe>
     </div>
-
   </div>
 
   <p id="bottomText">
-    CATHODE TV IS AN ARCHIVAL SCREENING ENTITY EXISTING FOR EDUCATIONAL PURPOSES ONLY.
+    DIY FILM FESTIVAL IS AN ARCHIVAL SCREENING ENTITY EXISTING FOR EDUCATIONAL PURPOSES ONLY.
     <br>
-    VISIT OUR <a href="https://linktr.ee/cathodetv" style="color: #da0960" target="_blank"> LINKTREE </a> FOR MORE ZION DIODE ENERGY EXCRETIONS.
+    VISIT OUR <a href="https://linktr.ee/cathodetv" style="color: #da0960" target="_blank"> TREE OF LINKS </a> FOR MORE DIY FILM FESTIVAL.
   </p>
 </body>
 
