--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/6073731d35363c0861bf75a3/a16066cb-e635-4b0d-b7fd-8edf8849cf10/favicon.ico?format=100w"/>
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico"/> -->
   <title>DIY Film Festival</title>
 </head>
 
@@ -100,7 +100,7 @@
       </a>
     </div>
     <div id="scheduleContainer">
-      <a id="scheduleButton" href="https://docs.google.com/presentation/d/1p9aO940bAG2Qm_hGwEhyQRgqot2xmrvDM4lvGCLnqNo/present#slide=id.p" target="_blank">SCHEDULE</a>
+      <a id="scheduleButton" href="#" target="_blank">SCHEDULE</a>
     </div>
   </div>
 
@@ -117,7 +117,7 @@
   <p id="bottomText">
     DIY FILM FESTIVAL IS AN ARCHIVAL SCREENING ENTITY EXISTING FOR EDUCATIONAL PURPOSES ONLY.
     <br>
-    VISIT OUR <a href="https://linktr.ee/cathodetv" style="color: #da0960" target="_blank"> TREE OF LINKS </a> FOR MORE DIY FILM FESTIVAL.
+    VISIT OUR <a href="https://linktr.ee/" style="color: #da0960" target="_blank"> TREE OF LINKS </a> FOR MORE DIY FILM FESTIVAL.
   </p>
 </body>
 
